--- a/products/creatures.html
+++ b/products/creatures.html
@@ -80,8 +80,9 @@
                 Happy Hands <span class="text-accent">Hideaway</span>
             </a>
             <div class="hidden md:flex space-x-8 text-sm font-medium">
-                <a href="../index.html" class="hover:text-accent transition-colors">Home</a>
-                <a href="#" class="text-accent font-semibold">Creatures</a>
+                <a href="../profile.html" class="hover:text-accent transition-colors">profile</a>
+                <a href="../shop.html" class="hover:text-accent transition-colors">shop</a>
+                <a href="../socials.html" class="hover:text-accent transition-colors">socials</a>
             </div>
         </div>
     </nav>
@@ -95,9 +96,6 @@
             <h2 class="text-[3.5rem] font-semibold mb-4 leading-tight">
                 The Creatures Collection
             </h2>
-            <p class="text-[1.1rem] mb-8 text-ink/80 max-w-lg mx-auto">
-                Tiny hand-sculpted friends, perfect for fairy gardens or your desk.
-            </p>
         </div>
     </section>
 
@@ -110,7 +108,7 @@
             <!-- Creature 1 -->
             <div class="bg-white rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 hover:-translate-y-1 flex flex-col overflow-hidden group">
                 <div class="aspect-square overflow-hidden bg-gray-100 relative">
-                    <img loading="lazy" src="../images/creatures1.jpg" onerror="this.src='https://picsum.photos/seed/creature1/400/400'" alt="Creature 1" class="card-img w-full h-full object-cover">
+                    <img loading="lazy" src="../images/creatures1.jpg" onerror="this.src='../images/img_not_found.jpg'" alt="Creature 1" class="card-img w-full h-full object-cover">
                 </div>
                 <div class="p-5 text-center flex-grow flex flex-col justify-center">
                     <h4 class="font-bold text-lg mb-1">Creature #1</h4>
@@ -131,7 +129,7 @@
             <!-- Creature 2 -->
             <div class="bg-white rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 hover:-translate-y-1 flex flex-col overflow-hidden group">
                 <div class="aspect-square overflow-hidden bg-gray-100 relative">
-                    <img loading="lazy" src="../images/creatures2.jpg" onerror="this.src='https://picsum.photos/seed/creature2/400/400'" alt="Creature 2" class="card-img w-full h-full object-cover">
+                    <img loading="lazy" src="../images/creatures2.jpg" onerror="this.src='../images/img_not_found.jpg'" alt="Creature 2" class="card-img w-full h-full object-cover">
                 </div>
                 <div class="p-5 text-center flex-grow flex flex-col justify-center">
                     <h4 class="font-bold text-lg mb-1">Creature #2</h4>
@@ -152,7 +150,7 @@
             <!-- Creature 3 -->
             <div class="bg-white rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 hover:-translate-y-1 flex flex-col overflow-hidden group">
                 <div class="aspect-square overflow-hidden bg-gray-100 relative">
-                    <img loading="lazy" src="../images/creatures3.jpg" onerror="this.src='https://picsum.photos/seed/creature3/400/400'" alt="Creature 3" class="card-img w-full h-full object-cover">
+                    <img loading="lazy" src="../images/creatures3.jpg" onerror="this.src='../images/img_not_found.jpg'" alt="Creature 3" class="card-img w-full h-full object-cover">
                 </div>
                 <div class="p-5 text-center flex-grow flex flex-col justify-center">
                     <h4 class="font-bold text-lg mb-1">Creature #3</h4>
@@ -173,7 +171,7 @@
             <!-- Creature 4 (Example Duplicate) -->
             <div class="bg-white rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 hover:-translate-y-1 flex flex-col overflow-hidden group">
                 <div class="aspect-square overflow-hidden bg-gray-100 relative">
-                    <img loading="lazy" src="../images/creatures1.jpg" onerror="this.src='https://picsum.photos/seed/creature4/400/400'" alt="Creature 4" class="card-img w-full h-full object-cover">
+                    <img loading="lazy" src="../images/creatures1.jpg" onerror="this.src='../images/img_not_found.jpg'" alt="Creature 4" class="card-img w-full h-full object-cover">
                 </div>
                 <div class="p-5 text-center flex-grow flex flex-col justify-center">
                     <h4 class="font-bold text-lg mb-1">Creature #4</h4>
@@ -190,9 +188,6 @@
                     </div>
                 </div>
             </div>
-
-            <!-- Duplicate these blocks for as many Creatures as you have -->
-
         </div>
         </div>
     </section>
