`Refactor basket.js and product pages to use event delegation and dynamic product loading`

--- a/shop.html
+++ b/shop.html
@@ -83,6 +83,7 @@
       <div class="hidden md:flex space-x-8 text-sm font-medium">
         <a href="#" class="hover:text-accent transition-colors">Home</a>
         <a href="#categories" class="hover:text-accent transition-colors">Collections</a>
+        <a href="admin.html" class="text-gray-400 hover:text-accent transition-colors text-xs">admin</a>
       </div>
     </div>
   </nav>
