--- a/shop.html
+++ b/shop.html
@@ -81,9 +81,11 @@
         Happy Hands <span class="text-accent">Hideaway</span>
       </div>
       <div class="hidden md:flex space-x-8 text-sm font-medium">
-        <a href="#" class="hover:text-accent transition-colors">Home</a>
-        <a href="#categories" class="hover:text-accent transition-colors">Collections</a>
-        <a href="admin.html" class="text-gray-400 hover:text-accent transition-colors text-xs">admin</a>
+        <a href="index.html" class="hover:text-accent transition-colors">Home</a>
+        <a href="shop.html" class="hover:text-accent transition-colors">Shop</a>
+        <a href="profile.html" class="hover:text-accent transition-colors">About</a>
+        <a href="events.html" class="hover:text-accent transition-colors">Events</a>
+        <a href="socials.html" class="hover:text-accent transition-colors">Contact</a>
       </div>
     </div>
   </nav>
@@ -95,14 +97,11 @@
     
     <div class="max-w-[800px] mx-auto relative z-10">
       <h2 class="text-[3.5rem] font-semibold mb-4 leading-tight">
-        Art that whispers, <br/> <span class="italic text-accent">"Go ahead and smile"</span>
+        Art that whispers <br/> <span class="italic text-accent">"Go ahead, smile"</span>
       </h2>
       <p class="text-[1.1rem] mb-8 text-ink/80 max-w-lg mx-auto">
         Explore our categories of handmade clay figurines, home decor, and gifts.
       </p>
-      <a href="#categories" class="inline-block bg-accent text-white font-medium px-8 py-3 rounded-full shadow-lg hover:bg-accent-hover hover:-translate-y-1 transition-all duration-300">
-        Browse Collections
-      </a>
     </div>
   </section>
 
